Fix pill line wrap issue

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -272,6 +272,8 @@
   margin: 0;
   //justify-content: space-between;
   gap: 0.5em;
+  max-width: 100%;
+  flex-wrap: wrap;
 }
 
 .pill {
@@ -282,4 +284,5 @@
   border-radius: 20px;
   list-style-type: none;
   line-height: 1.5;
+  white-space: nowrap;
 }
